--- a/Views/Declare/OverlayBonded_Edit.cshtml
+++ b/Views/Declare/OverlayBonded_Edit.cshtml
@@ -5,6 +5,7 @@
         <div title="转入">
             <form class="OrderFrom" method="post" id="OrderFrom1">
                 <input type="hidden" name="ID" value="@ViewData["id1"]" />
+                <input type="hidden" name="ASSOCIATENO" />
                 <input type="hidden" name="type" value="01" />
                 <input type="hidden" name="CODE" />
                 <table class="scene">
@@ -268,6 +269,7 @@
         <div title="转出">
             <form class="OrderFrom" method="post" id="OrderFrom3">
                 <input type="hidden" name="ID" value="@ViewData["id3"]" />
+                <input type="hidden" name="ASSOCIATENO" />
                 <input type="hidden" name="type" value="01" />
                 <input type="hidden" name="CODE" />
                 <table class="scene">
