--- a/Views/Declare/DomesticBlc_Edit.cshtml
+++ b/Views/Declare/DomesticBlc_Edit.cshtml
@@ -4,6 +4,7 @@
         <input type="hidden" name="ID" />
         <input type="hidden" name="type" value="01" />
         <input type="hidden" name="CODE" />
+        <input type="text" name="ASSOCIATENO" />
         <table id="scene">
             <tr>
                 <td>
