--- a/Views/Declare/OnelineIn_Edit.cshtml
+++ b/Views/Declare/OnelineIn_Edit.cshtml
@@ -3,6 +3,9 @@
          data-options="collapsible:true">
         <input type="hidden" name="ID" />
         <input type="hidden" name="type" value="01" />
+        <input type="hidden" name="page" value="/Declare/OnelineIn_Edit" />
+        <input type="text" name="DECLARATIONCODE" />
+        <input type="text" name="ORDERCODE" />
         <table>
             <tr>
                 <td>
@@ -280,7 +283,8 @@
                 </td>
                 <td>
                     <label for="CHAYANZHILINGXIAFATIME" style="width:100px;">查验指令下发时间:</label>
-                    <input class="easyui-datetimebox value" type="text" name="CHAYANZHILINGXIAFATIME">
+                    <input class="easyui-datetimebox value" type="text" name="CHAYANZHILINGXIAFATIME" editable="false">
+
                 </td>
             </tr>
             <tr>
@@ -299,7 +303,7 @@
                 </td>
                 <td>
                     <label for="KOUHUOTIME" style="width:100px;">扣货时间:</label>
-                    <input class="easyui-datetimebox value" type="text" name="KOUHUOTIME">
+                    <input class="easyui-datetimebox value" type="text" name="KOUHUOTIME" editable="false">
                 </td>
             </tr>
         </table>
