--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -54,8 +54,8 @@
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'BUSIUNITNAME',width:200">收货人</th>
-                    <th data-options="field:'text',width:80,sortable:true">报关单号</th>
-                    <th data-options="field:'text',width:80,sortable:true">海关通关状态</th>
+                    <th data-options="field:'DECLARATIONCODE',width:150,sortable:true">报关单号</th>
+                    <th data-options="field:'DECLARATIONSTATUS',width:150,sortable:true">海关通关状态</th>
                     <th data-options="field:'text',width:80,sortable:true">关务状态</th>
                     <th data-options="field:'BUSITYPE',width:100,formatter:formatBUSITYPE">业务类型</th>
                 </tr>
