--- a/Views/Declare/DomesticBlc_Edit.cshtml
+++ b/Views/Declare/DomesticBlc_Edit.cshtml
@@ -4,7 +4,10 @@
         <input type="hidden" name="ID" />
         <input type="hidden" name="type" value="01" />
         <input type="hidden" name="CODE" />
-        <input type="text" name="ASSOCIATENO" />
+        <input type="hidden" name="ASSOCIATENO" />
+
+        <input type="hidden" name="DECLARATIONCODE" />
+        <input type="hidden" name="ORDERCODE" />
         <table id="scene">
             <tr>
                 <td>
