--- a/Views/Declare/OnelineIn_Edit.cshtml
+++ b/Views/Declare/OnelineIn_Edit.cshtml
@@ -4,8 +4,8 @@
         <input type="hidden" name="ID" />
         <input type="hidden" name="type" value="01" />
         <input type="hidden" name="page" value="/Declare/OnelineIn_Edit" />
-        <input type="text" name="DECLARATIONCODE" />
-        <input type="text" name="ORDERCODE" />
+        <input type="hidden" name="DECLARATIONCODE" />
+        <input type="hidden" name="ORDERCODE" />
         <table>
             <tr>
                 <td>
