--- a/Views/Declare/SpecialSupervision_Edit.cshtml
+++ b/Views/Declare/SpecialSupervision_Edit.cshtml
@@ -3,6 +3,8 @@
          data-options="collapsible:true">
         <input type="hidden" name="ID" />
         <input type="hidden" name="type" value="01" />
+        <input type="hidden" name="DECLARATIONCODE" />
+        <input type="hidden" name="ORDERCODE" />
         <table>
             <tr>
                 <td>
