--- a/Views/Inspect/DomesticKnot_Edit.cshtml
+++ b/Views/Inspect/DomesticKnot_Edit.cshtml
@@ -6,6 +6,11 @@
             <input type="hidden" name="ID" value="@ViewData["id1"]" />
             <input type="hidden" name="type" value="02" />
             <input type="hidden" name="CODE" />
+
+            <input type="hidden" name="ASSOCIATENO" />
+
+            <input type="hidden" name="DECLARATIONCODE" />
+            <input type="hidden" name="ORDERCODE" />
             <table class="scene">
 
                 <tr>
