--- a/Views/Inspect/OnelineIn_Edit.cshtml
+++ b/Views/Inspect/OnelineIn_Edit.cshtml
@@ -4,6 +4,9 @@
          data-options="collapsible:true">
         <input type="hidden" name="ID" />
         <input type="hidden" name="type" value="02" />
+
+        <input type="hidden" name="DECLARATIONCODE" />
+        <input type="hidden" name="ORDERCODE" />
         <table>
 
             <tr>
