--- a/Views/Inspect/OnelineIn_List.cshtml
+++ b/Views/Inspect/OnelineIn_List.cshtml
@@ -50,7 +50,7 @@
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'BUSIUNITNAME',width:200,sortable:true,">收货人</th>
                     <th data-options="field:'CLEARANCENO',width:100">通关单号</th>
-                    <th data-options="field:'text',width:100,sortable:true">报检单号</th>
+                    <th data-options="field:'DECLARATIONCODE',width:150,sortable:true">报检单号</th>
                     <th data-options="field:'INSPSTATUS',width:100,sortable:true">报检状态</th>
                     <th data-options="field:'DECLSTATUS',width:100,sortable:true">报关状态</th>
                     <th data-options="field:'BUSITYPE',width:100,formatter:formatBUSITYPE">业务类型</th>
