--- a/Views/Declare/OnelineOut_Edit.cshtml
+++ b/Views/Declare/OnelineOut_Edit.cshtml
@@ -3,8 +3,8 @@
          data-options="collapsible:true">
         <input type="hidden" name="ID" />
         <input type="hidden" name="type" value="01" />
-        <input type="text" name="DECLARATIONCODE" />
-        <input type="text" name="ORDERCODE" />
+        <input type="hidden" name="DECLARATIONCODE" />
+        <input type="hidden" name="ORDERCODE" />
         <table>
             <tr>
                 <td>
