--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@
                 <li>
                     <a href="javascript:void(0)">后台管理</a>
                     <ul>
-                        <li><a href="#">用户管理</a></li>
+                        <li><a href="/Backstage//UserList">用户管理</a></li>
                         <li><a href="#">模块管理</a></li>
                         <li><a href="#">权限管理</a></li>
                         <li><a href="/Common/SyncFoo_List">同步日志</a></li>
