--- a/Views/Backstage/UserList.cshtml
+++ b/Views/Backstage/UserList.cshtml
@@ -12,7 +12,7 @@
         var userid, store_user;
         Ext.onReady(function () {
             store_user = Ext.create('Ext.data.JsonStore', {
-                fields: ['ID', 'NAME', 'REALNAME', 'EMAIL', 'MOBILE', 'ENABLED', 'CREATETIME','REMARK'],
+                fields: ['ID', 'NAME', 'REALNAME', 'EMAIL', 'MOBILE', 'ENABLED', 'CREATETIME', 'REMARK'],
                 pageSize: 20,
                 proxy: {
                     type: 'ajax',
@@ -60,14 +60,24 @@
             })
         });
 
-        function inipsd(id, name) {
-            Ext.MessageBox.confirm('提示', '初始化密码，确定要执行该操作吗？', function (btn) {
+        function inipassword() {
+            var recs = Ext.getCmp('grid_user').getSelectionModel().getSelection();
+            if (recs.length == 0) {
+                Ext.MessageBox.alert('提示', '请选择要执行初始化密码的记录！');
+                return;
+            }
+            Ext.MessageBox.confirm('提示', '确定要执行密码初始化吗？', function (btn) {
                 if (btn == 'yes') {
                     Ext.Ajax.request({
-                        url: 'UserList.aspx?action=inipsd&id=' + id + "&name=" + name,
-                        success: function (response) {
-                            if (response.responseText) {
-                                Ext.MessageBox.alert('提示', '初始化密码成功！');
+                        url: '/Backstage/inipassword',
+                        params: { userid: recs[0].get("ID") },
+                        success: function (response, option) {
+                            var json = Ext.decode(response.responseText);
+                            if (json.success == true) {
+                                Ext.MessageBox.alert('提示', '密码初始化成功！');
+                            }
+                            else {
+                                Ext.MessageBox.alert('提示', '密码初始化失败！');
                             }
                         }
                     });
@@ -104,8 +114,9 @@
 </head>
 <body>
     <div class="btn-group" role="group">
-        <button type="button" onclick="user_win()" class="btn btn-primary btn-sm"><i class="fa fa-plus fa-fw"></i>&nbsp;添加</button>
-        <button type="button" onclick="deleteuser()" class="btn btn-primary btn-sm"><i class="fa fa-trash-o"></i>&nbsp;删除</button>
+        <button type="button" onclick="user_win()" class="btn btn-primary btn-sm"><i class="icon iconfont">&#xe60b;</i>&nbsp;添加</button>
+        <button type="button" onclick="deleteuser()" class="btn btn-primary btn-sm"><i class="icon iconfont">&#xe606;</i>&nbsp;删除</button>
+        <button type="button" onclick="inipassword()" class="btn btn-primary btn-sm"><i class="icon iconfont">&#xe608;</i>&nbsp;初始化密码</button>
     </div>
     <div id="div_grid"></div>
 </body>
