update user manage

--- a/Views/Backstage/UserList.cshtml
+++ b/Views/Backstage/UserList.cshtml
@@ -44,12 +44,12 @@
                     { header: 'ID', dataIndex: 'ID', hidden: true },
                     { header: '登录账户', dataIndex: 'NAME', width: 100 },
                     { header: '名称', dataIndex: 'REALNAME', width: 170 },
-                    { header: '状态', dataIndex: 'ENABLED', width: 60 },
-                    { header: '创建时间', dataIndex: 'CREATETIME', width: 130 },
+                    { header: '状态', dataIndex: 'ENABLED', width: 60 },                   
                     { header: '邮箱', dataIndex: 'EMAIL', width: 160 },
                     { header: '电话', dataIndex: 'MOBILE', width: 150 },
                     { header: '所属客户', width: 100 },
-                    { header: '备注', dataIndex: 'REMARK', flex: 1 }
+                    { header: '备注', dataIndex: 'REMARK', flex: 1 },
+                    { header: '创建时间', dataIndex: 'CREATETIME', width: 130 }
                 ],
                 listeners: {
                     'itemdblclick': function (view, record, item, index, e) {
