--- a/Views/Backstage/UserList.cshtml
+++ b/Views/Backstage/UserList.cshtml
@@ -44,7 +44,7 @@
                     { header: 'ID', dataIndex: 'ID', hidden: true },
                     { header: '登录账户', dataIndex: 'NAME', width: 100 },
                     { header: '名称', dataIndex: 'REALNAME', width: 170 },
-                    { header: '状态', dataIndex: 'ENABLED', width: 60 },                   
+                    { header: '状态', dataIndex: 'STATUS', width: 60, renderer: render },
                     { header: '邮箱', dataIndex: 'EMAIL', width: 160 },
                     { header: '电话', dataIndex: 'MOBILE', width: 150 },
                     { header: '所属客户', width: 100 },
@@ -109,6 +109,16 @@
                     });
                 }
             })
+        }
+        function render(value, cellmeta, record, rowIndex, columnIndex, store) {
+            var rtn = "";
+            var dataindex = cellmeta.column.dataIndex;
+            switch (dataindex) {
+                case "STATUS":
+                    rtn = 1 ? "已启用" : "已禁用";
+                    break;
+            }
+            return rtn;
         }
     </script>
 </head>
