--- a/Views/Backstage/ModuleList.cshtml
+++ b/Views/Backstage/ModuleList.cshtml
@@ -151,6 +151,7 @@
                                             else { //如果是修改
                                                 parentNode.set("NAME", result.data.NAME);
                                                 parentNode.set("URL", result.data.URL);
+                                                parentNode.set("SORTINDEX", result.data.SORTINDEX);
                                             }
                                             win_sysmodule.close();
                                         });
