--- a/Views/Declare/OnelineOut_Edit.cshtml
+++ b/Views/Declare/OnelineOut_Edit.cshtml
@@ -168,14 +168,13 @@
             <tr>
                 <td>
                     <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
-                    <input class="easyui-textbox time_input" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
+                    <input class="easyui-textbox time_input DECLSTATUS" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
                     @*<a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="SHIWUFANGXINGUSERNAME">实物放行人:</label>
                     <input class="easyui-textbox " type="text" id="SHIWUFANGXINGUSERNAME" name="SHIWUFANGXINGUSERNAME" disabled="disabled" />
                 </td>
-
 
                 <td>
                     <label for="SHIWUJIAFENGTIME">实物加封时间:</label>
