--- a/Views/Declare/SpecialSupervision_Edit.cshtml
+++ b/Views/Declare/SpecialSupervision_Edit.cshtml
@@ -167,7 +167,7 @@
             <tr>
                 <td>
                     <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
-                    <input class="easyui-textbox time_input" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
+                    <input class="easyui-textbox time_input DECLSTATUS" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
                     @*<a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
@@ -254,7 +254,7 @@
                 </td>
                 <td>
                     <label for="CHAYANZHILINGXIAFATIME" style="width:100px;">查验指令下发时间:</label>
-                    <input class="easyui-datebox value" name="CHAYANZHILINGXIAFATIME" placeholder="开始时间">
+                    <input class="easyui-datetimebox value" name="CHAYANZHILINGXIAFATIME" editable="false">
                 </td>
             </tr>
             <tr>
@@ -273,7 +273,7 @@
                 </td>
                 <td>
                     <label for="KOUHUOTIME" style="width:100px;">扣货时间:</label>
-                    <input class="easyui-datebox value" name="KOUHUOTIME" placeholder="开始时间">
+                    <input class="easyui-datetimebox value" name="KOUHUOTIME" editable="false">
                 </td>
             </tr>
         </table>
