--- a/Views/Inspect/DomesticKnot_List.cshtml
+++ b/Views/Inspect/DomesticKnot_List.cshtml
@@ -60,7 +60,7 @@
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'BUSIUNITNAME',width:200,sortable:true,">进口企业</th>
                     <th data-options="field:'BUSIUNITNAME',width:200,sortable:true,">出口企业</th>
-                    <th data-options="field:'text',width:100,sortable:true,">报检单号</th>
+                    <th data-options="field:'DECLARATIONCODE',width:100,sortable:true,">报检单号</th>
                     <th data-options="field:'CLEARANCENO',width:100,sortable:true">通关单号</th>
                     <th data-options="field:'INSPSTATUS',width:100,sortable:true">报检状态</th>
                     <th data-options="field:'DECLSTATUS',width:100,sortable:true">报关状态</th>
@@ -82,6 +82,8 @@
                     <th data-options="field:'GAIDANKAISHITIME',width:100,sortable:true">改单时间</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO号</th>
                     <th data-options="field:'FOONOBJ',width:180,sortable:true">FOO报检服务号</th>
+                    <th data-options="field:'ASSOCIATENO',width:180,sortable:true">两单关联号</th>
+                    <th data-options="field:'CORRESPONDNO',width:180,sortable:true">四单关联号</th>
                 </tr>
             </thead>
         </table>
