--- a/Views/Declare/DomesticBlc_Edit.cshtml
+++ b/Views/Declare/DomesticBlc_Edit.cshtml
@@ -138,7 +138,7 @@
                 </td>
                 <td>
                     <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
-                    <input class="easyui-textbox time_input" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
+                    <input class="easyui-textbox time_input DECLSTATUS" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
                     @*<a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
