--- a/Views/Declare/OverlayBonded_Edit.cshtml
+++ b/Views/Declare/OverlayBonded_Edit.cshtml
@@ -52,7 +52,7 @@
                     <tr>
                         <td>
                             <label for="GUANWUJIESHOUTIME"> 关务接受时间:</label>
-                            <input class="easyui-textbox  time_input" id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" datatype="GUANWUJIESHOU" name="GUANWUJIESHOUTIME" editable="false" />
+                            <input class="easyui-textbox  time_input" style="width:200px" id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" datatype="GUANWUJIESHOU" name="GUANWUJIESHOUTIME" editable="false" />
                             @*<a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
@@ -194,7 +194,7 @@
                         </td>
                         <td>
                             <label for="KOUHUOTIME">扣货时间:</label>
-                            <input class="easyui-datebox value" name="KOUHUOTIME" placeholder="开始时间">
+                            <input class="easyui-datetimebox value" name="KOUHUOTIME" editable="false">
                         </td>
                     </tr>
                     <tr>
@@ -243,7 +243,7 @@
                         </td>
                         <td>
                             <label for="CHAYANZHILINGXIAFATIME" style="width:100px;">查验指令下发时间:</label>
-                            <input class="easyui-datebox value" name="CHAYANZHILINGXIAFATIME" placeholder="开始时间">
+                            <input class="easyui-datetimebox value" name="CHAYANZHILINGXIAFATIME"  editable="false">
                         </td>
                     </tr>
                     <tr>
@@ -409,7 +409,7 @@
                         </td>
                         <td>
                             <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
-                            <input class="easyui-textbox time_input" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
+                            <input class="easyui-textbox time_input DECLSTATUS" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
                             @*<a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
@@ -462,7 +462,7 @@
                         </td>
                         <td>
                             <label for="KOUHUOTIME">扣货时间:</label>
-                            <input class="easyui-datebox value" name="KOUHUOTIME" placeholder="开始时间">
+                            <input class="easyui-datetimebox value" name="KOUHUOTIME" editable="false">
                         </td>
                     </tr>
                     <tr>
@@ -511,7 +511,7 @@
                         </td>
                         <td>
                             <label for="CHAYANZHILINGXIAFATIME" style="width:100px;">查验指令下发时间:</label>
-                            <input class="easyui-datebox value" name="CHAYANZHILINGXIAFATIME" placeholder="开始时间">
+                            <input class="easyui-datetimebox value" name="CHAYANZHILINGXIAFATIME" editable="false">
                         </td>
                     </tr>
                     <tr>
