--- a/Views/Inspect/DomesticKnot_Edit.cshtml
+++ b/Views/Inspect/DomesticKnot_Edit.cshtml
@@ -62,7 +62,7 @@
                 <tr>
                     <td>
                         <label for="BAOJIANTIME"> 报检时间:</label>
-                        <input class="easyui-textbox time_input" datatype="BAOJIAN" id="BAOJIANTIME" name="BAOJIANTIME" editable="false" />
+                        <input class="easyui-textbox time_input INSPSTATUS" datatype="BAOJIAN" id="BAOJIANTIME" name="BAOJIANTIME" editable="false" />
                         @*<a href="javascript:void(0)" datatype="BAOJIAN" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                     </td>
                     <td>
@@ -71,7 +71,7 @@
                     </td>
                     <td>
                         <label for="BAOJIANFANGXINGTIME"> 报检放行时间:</label>
-                        <input class="easyui-textbox time_input" datatype="BAOJIANFANGXING" id="BAOJIANFANGXINGTIME" name="BAOJIANFANGXINGTIME" editable="false" />
+                        <input class="easyui-textbox time_input INSPSTATUS" datatype="BAOJIANFANGXING" id="BAOJIANFANGXINGTIME" name="BAOJIANFANGXINGTIME" editable="false" />
                         @*<a href="javascript:void(0)" datatype="BAOJIANFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                     </td>
                     <td>
@@ -82,22 +82,22 @@
 
                 <tr>
                     <td>
-                        <label for="SHANDANKAISHITIME"> 删单时间:</label>
-                        <input class="easyui-textbox time_input" datatype="SHANDANKAISHI" id="SHANDANKAISHITIME" name="SHANDANKAISHITIME" editable="false" />
+                        <label for="BJSHANDANTIME"> 删单时间:</label>
+                        <input class="easyui-textbox time_input" datatype="BJSHANDAN" id="BJSHANDANTIME" name="BJSHANDANTIME" editable="false" />
                         @*<a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                     </td>
                     <td>
-                        <label for="SHANDANKAISHIUSERNAME">删单人:</label>
-                        <input class="easyui-textbox " type="text" id="SHANDANKAISHIUSERNAME" name="SHANDANKAISHIUSERNAME" disabled="disabled" />
+                        <label for="BJSHANDANUSERNAME">删单人:</label>
+                        <input class="easyui-textbox " type="text" id="BJSHANDANUSERNAME" name="BJSHANDANUSERNAME" disabled="disabled" />
                     </td>
                     <td>
-                        <label for="GAIDANKAISHITIME"> 改单时间:</label>
-                        <input class="easyui-textbox time_input" datatype="GAIDANKAISHI" id="GAIDANKAISHITIME" name="GAIDANKAISHITIME" editable="false" />
+                        <label for="BJGAIDANTIME"> 改单时间:</label>
+                        <input class="easyui-textbox time_input" datatype="BJGAIDAN" id="BJGAIDANTIME" name="BJGAIDANTIME" editable="false" />
                         @*<a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                     </td>
                     <td>
-                        <label for="GAIDANKAISHIUSERNAME">改单人:</label>
-                        <input class="easyui-textbox " type="text" id="GAIDANKAISHIUSERNAME" name="GAIDANKAISHIUSERNAME" disabled="disabled" />
+                        <label for="BJGAIDANUSERNAME">改单人:</label>
+                        <input class="easyui-textbox " type="text" id="BJGAIDANUSERNAME" name="BJGAIDANUSERNAME" disabled="disabled" />
                     </td>
                 </tr>
 
@@ -140,6 +140,10 @@
                     <td>
                         <label for="XUNZHENGDESC">熏蒸备注:</label>
                         <input class="easyui-textbox" type="text" name="XUNZHENGDESC">
+                    </td>
+                    <td>
+                        <label for="INSPSTATUS">报检状态:</label>
+                        <input class="easyui-textbox" name="INSPSTATUS" id="INSPSTATUS">
                     </td>
                 </tr>
 
