--- a/Views/Backstage/ModuleList.cshtml
+++ b/Views/Backstage/ModuleList.cshtml
@@ -6,6 +6,11 @@
     <title></title>
     <link href="/js/Extjs42/resources/css/ext-all-gray.css" rel="stylesheet" type="text/css" />
     <script src="/js/Extjs42/bootstrap.js" type="text/javascript"></script> 
+    <style type="text/css">
+        body {
+            font-size: 14px !important;
+        }
+    </style>
     <script type="text/javascript">
         var treepanel;
         var nodeid = getQueryString("nodeid");
