--- a/Views/Backstage/AuthorityList.cshtml
+++ b/Views/Backstage/AuthorityList.cshtml
@@ -5,6 +5,11 @@
     <title></title>
     <link href="/js/Extjs42/resources/css/ext-all-gray.css" rel="stylesheet" type="text/css" />
     <script src="/js/Extjs42/bootstrap.js" type="text/javascript"></script>
+    <style type="text/css">
+        body {
+            font-size: 14px !important;
+        }
+    </style>
     <script type="text/javascript">
         var gridUser, store_user, treeModelstore, gridStation, store_Station;
         var userid;
