--- a/Views/Backstage/UserList.cshtml
+++ b/Views/Backstage/UserList.cshtml
@@ -6,6 +6,11 @@
     <link href="/js/Extjs42/resources/css/ext-all-gray.css" rel="stylesheet" type="text/css" />
     <script src="/js/Extjs42/bootstrap.js" type="text/javascript"></script>
     <script src="/js/useredit.js"></script>
+    <style type="text/css">
+        body {
+            font-size: 14px !important;
+        }
+    </style>
     <script type="text/javascript">
         var userid, store_user;
         Ext.onReady(function () {
